# Python_cours_repo

./: README.md
1/: example.txt  main.py
1/word_statistics/: word_statistics.py
2/: checker.py  input.json  main.py  models.py  parser.py  scheduler.py
3/coursework-ciphers_software-Release_recent/: .gitignore  Ciphers App Manual.docx  Config.env  app.py  cleanup-large-files.sh  comp.iss  exception_handlers.py
3/coursework-ciphers_software-Release_recent/Dictionaries/en/10/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/en/11/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/en/12/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/en/13/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/en/14/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/en/15/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/en/3/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/en/4/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/en/5/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/en/6/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/en/7/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/en/8/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/en/9/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/1/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/10/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/13/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/14/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/15/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/16/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/17/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/18/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/19/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/2/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/20/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/21/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/22/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/23/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/24/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/25/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/26/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/27/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/28/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/29/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/3/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/34/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/4/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/5/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/6/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/7/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/8/: words.txt
3/coursework-ciphers_software-Release_recent/Dictionaries/ru/9/: words.txt
3/coursework-ciphers_software-Release_recent/ciphers_api_module/: ciphers_api_module.py
3/coursework-ciphers_software-Release_recent/cpp/Cardan_cipher/cpp/cipher_example_dll/boolmatrix_generator/: CMakeLists.txt  boolmatrix_generator.cpp  boolmatrix_generator.hpp
3/coursework-ciphers_software-Release_recent/cpp/Gamut_cipher/py/: main.py
3/coursework-ciphers_software-Release_recent/cpp/Hill_cipher/cpp/: CMakeLists.txt  main_cipher_file.cpp
3/coursework-ciphers_software-Release_recent/cpp/Hill_cipher/cpp/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp
3/coursework-ciphers_software-Release_recent/cpp/Hill_cipher/cpp/cipher_first/: CMakeLists.txt  Hill-cipher.cpp  Hill-cipher.hpp
3/coursework-ciphers_software-Release_recent/cpp/Homophone_cipher/src/cpp/Homophone_cipher_dll/Homophone_cipher/: CMakeLists.txt  Homophone_cipher.cpp  Homophone_cipher.hpp
3/coursework-ciphers_software-Release_recent/cpp/Homophone_cipher/src/cpp/Homophone_cipher_dll/homophone_generator/: CMakeLists.txt  homophone_generator.cpp  homophone_generator.hpp
3/coursework-ciphers_software-Release_recent/cpp/Viginer_cipher/: CMakeLists.txt  main_cipher_file.cpp
3/coursework-ciphers_software-Release_recent/cpp/Viginer_cipher/cipher_exceptions/: CMakeLists.txt
3/coursework-ciphers_software-Release_recent/cpp/Viginer_cipher/permutation_generator/: CMakeLists.txt  permutation_generator.hpp
3/coursework-ciphers_software-Release_recent/cpp/Viginer_cipher/viginer_cipher/: CMakeLists.txt  viginer_cipher.cpp  viginer_cipher.hpp
3/coursework-ciphers_software-Release_recent/settings/: Config.env  config.py
3/coursework-ciphers_software-Release_recent/static/: changeCipherScript.js  errorHandler.js  settingWindow.js  style.css
3/coursework-ciphers_software-Release_recent/templates/: select.html
(+67 files in other folders)
